add contact form

--- a/Private/SASS/PastelTheme.sass
+++ b/Private/SASS/PastelTheme.sass
@@ -356,3 +356,13 @@ pre .button
 	border-bottom-right-radius: 0
 	background-color: $themeActive
 	font-size: 0.8em
+
+textarea
+    transition: none
+    max-width: calc(100% - 5px)
+
+textarea, input[type="text"]
+    background-color: $themeAlt
+    border: 1px solid $themeActive
+    border-radius: 3px
+    color: $textMain
