--- a/Public/CSS/PastelTheme.css
+++ b/Public/CSS/PastelTheme.css
@@ -398,3 +398,15 @@ pre .button {
   background-color: #2c2c34;
   font-size: 0.8em;
 }
+
+textarea {
+  transition: none;
+  max-width: calc(100% - 5px);
+}
+
+textarea, input[type="text"] {
+  background-color: #3f3f4a;
+  border: 1px solid #2c2c34;
+  border-radius: 3px;
+  color: #d9d9d9;
+}
