--- a/Private/SASS/PastelTheme.sass
+++ b/Private/SASS/PastelTheme.sass
@@ -287,6 +287,7 @@ ul
 	min-width: 27px
 
 .post
+    position: relative
 	background-color: lighten( $themeActive, 2 )
 	display: flex
 	flex-direction: column
